# IREE_with_Fused_Op

iree/: CMakeLists.txt
iree/compiler/plugins/: iree_compiler_plugin.cmake
iree/compiler/src/iree/compiler/Codegen/ACCEL/TransformExtensions/: ACCELExtensions.cpp  ACCELExtensions.h  ACCELExtensionsOps.td  BUILD.bazel  CMakeLists.txt
iree/experimental/: plot_results.py  run_fusion_sweep.sh  sweep_plot.sh
iree/experimental/model/: clean.sh  topk.sh
verilator/: platform_basic.repl  platform_basic.resc
verilator/axi_sa16/: CMakeLists.txt  README.md  build_libvtop.sh  dma_controller.v  filelist.f  run.sh  sim_lib.cpp  sim_lib.h  sim_main.cpp
verilator/axi_sa16/obj_dir/: Vaxi_sa16.cpp  Vaxi_sa16.d  Vaxi_sa16.h  Vaxi_sa16.mk  Vaxi_sa16__Syms.cpp  Vaxi_sa16__Syms.d  Vaxi_sa16__Syms.h  Vaxi_sa16___024root.h  Vaxi_sa16___024root__DepSet_hfd34bb09__0.cpp  Vaxi_sa16___024root__DepSet_hfd34bb09__0.d  Vaxi_sa16___024root__DepSet_hfd34bb09__0__Slow.cpp  Vaxi_sa16___024root__DepSet_hfd34bb09__0__Slow.d  Vaxi_sa16___024root__DepSet_hfd34bb09__1.cpp  Vaxi_sa16___024root__DepSet_hfd34bb09__1.d  Vaxi_sa16___024root__DepSet_hfd34bb09__2.cpp  Vaxi_sa16___024root__DepSet_hfd34bb09__2.d  Vaxi_sa16___024root__DepSet_hfd34bb09__3.cpp  Vaxi_sa16___024root__DepSet_hfd34bb09__3.d  Vaxi_sa16___024root__DepSet_hfd34bb09__4.cpp  Vaxi_sa16___024root__DepSet_hfd34bb09__4.d  Vaxi_sa16___024root__Slow.d  Vaxi_sa16__ver.d  Vaxi_sa16_classes.mk
verilator/axi_sa16/src/: axi_sa16.v
verilator/demo/: fw.dump
verilator/demo1/: Makefile  README.md  fw.elf  fw.map  main.c
verilator/demo1/mlir/: offload_sa16.mlir
verilator/demo2/: Makefile  fw.dump  fw.elf  fw.map  linker.ld  main.c  runtime.c
verilator/fw/: Makefile  fw.elf  fw.map  linker.ld  main.c  start.S
verilator/gemm/: Makefile  accelerator_runtime.c  fw.dump  fw.elf  fw.map  gemm_runtime.c  selftest.c  start.S
verilator/mnv2/mlir/: README.md  (+1 more)
verilator/scripts/: a_tile0.resc  b_init.resc
(+120 files in other folders)
